update name of tRNA finding program

--- a/web/tmpl/SeqView.tmpl
+++ b/web/tmpl/SeqView.tmpl
@@ -94,9 +94,9 @@ function AragornSeq() {
  if ($('.rc_button').is(':hidden')==true){
    rc = 1;}
  if (featid) {
- window.open('RNA.pl?featid='+featid+'&upstream='+up+'&downstream='+down+'&rc='+rc);}
+ window.open('tRNA.pl?featid='+featid+'&upstream='+up+'&downstream='+down+'&rc='+rc);}
  else {
- window.open('RNA.pl?chr='+chr+'&upstream='+up+'&downstream='+down+'&dsid='+dsid+'&rc='+rc);
+ window.open('tRNA.pl?chr='+chr+'&upstream='+up+'&downstream='+down+'&dsid='+dsid+'&rc='+rc);
  }
 }
 
