--- a/web/tmpl/SynMap.tmpl
+++ b/web/tmpl/SynMap.tmpl
@@ -9,6 +9,26 @@ function get_organism_chain(type,val,i)
  ajax_wait("check_previous_analyses();");
 }
 
+function run_synmap(){
+if(!pageObj.basename) 
+  {
+  	setTimeout("run_synmap()", 100);
+  	return;
+  }
+	$('#results').hide(0);  	
+  	$('#log_text').show(0);
+
+  pageObj.nolog=1;
+  setTimeout("monitor_log()", 100);
+  
+go(['args__oid1','org_id1','args__oid2','org_id2','args__D','D','args__g','g','args__A','A','args__chr_length_limit','chr_length_limit','args__blast','blast', 'args__seq_type1','seq_type1', 'args__seq_type2','seq_type2','args__masked1','masked1', 'args__masked2','masked2','args__jobtitle','jobtitle','args__basename','args__'+pageObj.basename,'args__email','email','args__show_diags_only','args__'+$('#show_diags_only')[0].checked,'args__flip_output','args__'+$('#flip_output')[0].checked, 'args__regen_images','args__'+$('#regen_images')[0].checked],[handle_results]);
+}
+
+function handle_results(val){
+ $('#log_text').hide(0);
+ $('#results').show(0).html(val);
+ $('#synmap_go').show();
+}
 
 function check_previous_analyses(){
  get_previous_analyses(['args__oid1','org_id1','args__oid2','org_id2','args__seq_type1','seq_type1','args__seq_type2','seq_type2','args__masked1','masked1', 'args__masked2','masked2'],['previous_analyses']);
@@ -129,20 +149,14 @@ function restore_search_bar(div_id){
   }
 }
 
-function handle_results(val){
- $('#results').html(val);
- $('#synmap_go').show();
-
-}
-
 //These two functions are involved with emailing results
 function toggle_email_field(){
 	if ($('#check_email')[0].checked)
 	{
-		$('#email_box').show(0);
+		$('.email_box').show(0);
 	}
 	else{
-		$('#email_box').hide(0);
+		$('.email_box').hide(0);
 		$('#email').val('');
 		$('#email_error').hide(0);
 	}
@@ -163,8 +177,81 @@ function address_validity_check(validity){
 	}
 }
 
+function fill_jobtitle(){
+	var org1 = $('#org_id1 option:selected').html() || 0;
+	var org2 = $('#org_id2 option:selected').html() || 0;
+	
+	if (org1 != 0) {org1 = org1.replace(/\s+\(id\d+\)$/,"");}
+	if (org2 != 0) {org2 = org2.replace(/\s+\(id\d+\)$/,"");}
+	
+	var title;
+	
+	if (org1 != 0 && org2 != 0) title = org1+" v. "+org2;
+	else if (org1 != 0) title = org1;
+	else if (org2 != 0) title = org2;
+	else return;
+	
+	$('#jobtitle').val(title);
+}
+
+function update_basename(basename){
+	pageObj.basename=basename;
+	//alert(pageObj.basename);
+}
+
+function reset_basename(){
+	if(pageObj.basename) pageObj.basename=0;
+}
+ function monitor_log(log)
+{
+
+  var fasta = 0;
+  var blast = 0;
+  var blastdb = 0;
+  var dag = 0;
+  var results = 0;
+  var match;
+  pageObj.finished = 0;
+  if (log) {
+  
+  if(log.match(/fasta file/i)) fasta="Generating fasta files . . . ";
+  if(log.match(/Completed fasta creation/i)) {
+  	fasta += "done!<br/>";
+  	blastdb = "Generating blastable databases . . . ";
+  }
+  if(log.match(/Completed blastdb creation/i)) {
+  	blastdb += "done!<br/>";
+  	blast = "Running blast . . . ";
+  }
+   if(log.match(/Completed blast run/i)) {
+  	blast += "done!<br/>";
+  	dag = "Running DAGChainer . . . ";
+  }
+  if(log.match(/Completed dagchainer run/i)) {
+  	dag += "done!<br/>";
+  	results = "Generating images . . . ";
+  	pageObj.finished = 1;
+  }
+ }
+  
+
+  else {pageObj.nolog += 1;}
+  var message = "Initializing search . . . ";
+  
+  if (fasta) message += "done!<br/>"+fasta;
+  if (blastdb) message += blastdb;
+  if (blast) message += blast;
+  if (dag) message += dag;
+  if (results) message += results;
+  
+  if (!pageObj.finished && pageObj.nolog<8) {setTimeout("read_log(['args__logfile', 'args__'+pageObj.basename, 'args__prog','args__SynMap'], [monitor_log])",500);}
+  
+  if (message) $('#log_text').html(message);
+}
+
 </script>
 <table><tr><td>
+<DIV id=log_text class="small dna" style="display:none"></DIV>
 <DIV id=results><TMPL_IF NAME=RESULTS><TMPL_VAR NAME=RESULTS><TMPL_ELSE><span class="alert">WARNING:</span>  SynMap is a very computationally intense, multi-step program which may take hours to complete. It is highly recommended to have your results emailed to you. Please do not repeatedly pressed the "Generate SynMap" button!  When run, SynMap will:
 <li class=small>Generate fasta files of all coding sequence in selected genomes
 <li class=small>Generate blastable databases of sequences
@@ -179,7 +266,7 @@ function address_validity_check(validity){
 </table>
 
 <div>
-<input type=button id="synmap_go" value="Generate SynMap" onClick="$('#synmap_go').hide(); $('#results').html('<span class=dna>Loading. . .</span>');go(['args__oid1','org_id1','args__oid2','org_id2','args__D','D','args__g','g','args__A','A','args__chr_length_limit','chr_length_limit','args__blast','blast', 'args__seq_type1','seq_type1', 'args__seq_type2','seq_type2','args__masked1','masked1', 'args__masked2','masked2','args__email','email','args__show_diags_only','args__'+$('#show_diags_only')[0].checked,'args__flip_output','args__'+$('#flip_output')[0].checked, 'args__regen_images','args__'+$('#regen_images')[0].checked],[handle_results]);" \>
+<input type=button id="synmap_go" value="Generate SynMap" onClick="$('#synmap_go').hide();reset_basename();generate_basefile([],[update_basename]);run_synmap();" \>
 
 <input type=button value="Clear Results" onClick="$('#results').html('');" \>
 
@@ -249,12 +336,14 @@ function address_validity_check(validity){
        </select>
    </td>
    <td>E-mail results? <input type=checkbox id=check_email onclick="toggle_email_field()"></td>
-		<td><div id=email_box style="display:none;">Your E-mail Address: <input type=text id=email onBlur='address_validity_check()'>
+		<td><div class=email_box style="display:none;">Your E-mail Address: <input type=text id=email onBlur='address_validity_check()'>
 		<br>
 		<font id=email_error class="small" style="display: none; color: red;">You have supplied an invalid e-mail address.</font></div></td>
  <TR>
-   <TD>Minimum length of chromosomes:
-   <TD><input type=text size=8 id="chr_length_limit" value="1000000"> bp
+   <TD>Minimum length of chromosomes (bp):
+   <TD><input type=text size=8 id="chr_length_limit" value="1000000">
+   <td><div class=email_box style="display:none;">Job Title:</div></td>
+   <td><div class=email_box style="display:none;"><input type=text id=jobtitle> <input type=button value="Use Org Names" onClick="fill_jobtitle()"></div></td>
  <TR>
    <TD>Only show comparisons with diagonals?
    <TD><input type=checkbox name="show_diags_only" id="show_diags_only">
