--- a/web/tmpl/header.tmpl
+++ b/web/tmpl/header.tmpl
@@ -33,7 +33,7 @@ jQuery(document).ready(function(){
   pageObj.speed = jQuery.cookie('anim_speed') || 600;
   define_animation_speed(pageObj.speed)
   //alert(pageObj.speed);
-  if (!jQuery.browser.mozilla)browserAlert();
+  if (jQuery.browser.msie)browserAlert();
 });
 
 
