--- a/web/tmpl/index.tmpl
+++ b/web/tmpl/index.tmpl
@@ -1,4 +1,4 @@
-<SCRIPT language="JavaScript" type="text/javascript" src="./js/interface_carousel.js"></SCRIPT>
+	<SCRIPT language="JavaScript" type="text/javascript" src="./js/interface_carousel.js"></SCRIPT>
 <!--<SCRIPT language="JavaScript" type="text/javascript" src="./js/iutil.js"></SCRIPT>
 <SCRIPT language="JavaScript" type="text/javascript" src="./js/carousel.js"></SCRIPT>-->
 <SCRIPT language="JavaScript">
@@ -104,7 +104,7 @@ problems with it, please e-mail Eric Lyons
 a description or screenshot of the analysis parameters.  He will fix the problem
 as soon as possible.-->
 <TMPL_IF NAME="INTRO">
-<div style="width: 600px"><div><a href="/CoGe/GEvo.pl?prog=blastz;accn1=at1g07300;fid1=4091274;dsid1=556;chr1=1;dr1up=20000;dr1down=20000;gbstart1=1;gblength1=772;accn2=at2g29640;fid2=4113333;dsid2=557;chr2=2;dr2up=20000;dr2down=20000;gbstart2=1;rev2=1;num_seqs=2;autogo=1"><img src="/CoGe/picts/gevo-synteny.png" width=500px border=0 ></a></div><div align = center class="small species"><a href="/CoGe/GEvo.pl?prog=blastz;accn1=at1g07300;fid1=4091274;dsid1=556;chr1=1;dr1up=20000;dr1down=20000;gbstart1=1;gblength1=772;accn2=at2g29640;fid2=4113333;dsid2=557;chr2=2;dr2up=20000;dr2down=20000;gbstart2=1;rev2=1;num_seqs=2;autogo=1">GEvo analysis</a> of syntenic regions of Arabidopsis derived from its most recent genome duplication event.</div><p align=left>Welcome to CoGe.  CoGe is a comparative genomics platform designed to allow easy access to genomic data from any organism and provide analysis tools for finding homologous sequences and comparing multiple genomic regions.  If you are new to CoGe, we recommend reading <a href="/CoGe/docs/help/Tutorials/Tutorials.html">one of our tutorials</a> for examples of how to use CoGe.
+<div style="width: 600px"><div><a href="/CoGe/GEvo.pl?prog=blastz;accn1=at1g07300;fid1=4091274;dsid1=556;chr1=1;dr1up=20000;dr1down=20000;gbstart1=1;gblength1=772;accn2=at2g29640;fid2=4113333;dsid2=557;chr2=2;dr2up=20000;dr2down=20000;gbstart2=1;rev2=1;num_seqs=2;autogo=1"><img src="/CoGe/picts/gevo-synteny.png" width=500px border=0 ></a></div><div align = center class="small species"><a href="/CoGe/GEvo.pl?prog=blastz;accn1=at1g07300;fid1=4091274;dsid1=556;chr1=1;dr1up=20000;dr1down=20000;gbstart1=1;gblength1=772;accn2=at2g29640;fid2=4113333;dsid2=557;chr2=2;dr2up=20000;dr2down=20000;gbstart2=1;rev2=1;num_seqs=2;autogo=1">GEvo analysis</a> of syntenic regions of Arabidopsis derived from its most recent genome duplication event.</div><p align=left>CoGe is a comparative genomics platform designed to allow easy access to genomic data from any organism and provide analysis tools for finding and comparing homologous sequences from multiple genomic regions.  If you are new to CoGe, we recommend reading <a href="/CoGe/docs/help/Tutorials/Tutorials.html">one of our tutorials</a>.
 <!--<br><br>
 To obtain pre-made lists of syntenic gene sets with links for GEvo analyses, please visit our <a href="/CoGe/docs/help/Precomputed_menus_and_lists/CoGe_menus.html">downloads page</a> (also available on the menu bar).-->
 </div>
@@ -167,7 +167,7 @@ To obtain pre-made lists of syntenic gene sets with links for GEvo analyses, ple
  <TR>
   <TH>
     <DIV class = large>
-      Application
+      Access Point
     </DIV>
   </TH>
   <TH>
