changed setTimeout for organism search to 500ms

--- a/web/tmpl/SynMap.tmpl
+++ b/web/tmpl/SynMap.tmpl
@@ -103,7 +103,7 @@ function timing(val, val2){
      }
      else
      {
-       pageObj.pageobjtime = setTimeout("get_organism_chain('name',$('#"+val+"').val(),i[0])",200);
+       pageObj.pageobjtime = setTimeout("get_organism_chain('name',$('#"+val+"').val(),i[0])",500);
      }
 
    }
@@ -352,7 +352,7 @@ function reset_basename(){
    <TD><input type=checkbox name="flip_output" id="flip_output">
  <TR>
    <TD>Regenerate dotplot images?
-   <TD><input type=checkbox name="regen_images" id="regen_images" checked>
+   <TD><input type=checkbox name="regen_images" id="regen_images">
 <!-- <TR>
    <TD>Pop-up Annotations?
    <TD><input type=checkbox name="popup_anno" id="popup_anno">-->
