fixed typo where kb should have been bp

--- a/web/tmpl/CoGeBlast.tmpl
+++ b/web/tmpl/CoGeBlast.tmpl
@@ -1854,7 +1854,7 @@ function clear_org_list()
         <TH nowrap class=header>Perc ID</TH>
         <TH nowrap class=header>Score</TH>
         <TH nowrap class=header>Closest Feature</TH>
-        <TH nowrap class=header>Distance (kb)</TH>
+        <TH nowrap class=header>Distance (bp)</TH>
        </TR>
      </THEAD>
      <TBODY id=hsp_result_table_body style="overflow: auto;">
