added link to CoGe Code page

--- a/web/tmpl/header.tmpl
+++ b/web/tmpl/header.tmpl
@@ -167,6 +167,7 @@ function animate_section(name, style, speedy, show) {
 	<li>Downloads
 	 <ul>	   
 	  <li><a href="/CoGe/docs/help/Precomputed_menus_and_lists/CoGe_menus.html" target="_self">Syntenic gene sets</a></li>
+	  <li><a href="/CoGe/docs/help/Code/Code.html" target="_self">CoGe Source Code</a></li>
 
 <!--	  <li><a href="#" target="_self">My Page</a></li>
 	  <li><a href="#" target="_self">Contacts</a></li>
