changed GenomeView name to OrganismView

--- a/web/tmpl/header.tmpl
+++ b/web/tmpl/header.tmpl
@@ -154,7 +154,7 @@ function animate_section(name, style, speedy, show) {
 	 <li><a id=home href="/CoGe/" target="_self">Home</a></li>
 	 <li>Applications
 	  <ul>
-	  <li><a href="/CoGe/GenomeView.pl" target="_self">GenomeView</a></li>
+	  <li><a href="/CoGe/GenomeView.pl" target="_self">OrganismView</a></li>
 	  <li><a href="/CoGe/CoGeBlast.pl" target="_self">CoGeBlast</a></li>
 	  <li><a href="/CoGe/FeatView.pl" target="_self">FeatView</a></li>
 	  <li><a href="/CoGe/SynMap.pl" target="_self">SynMap</a></li>
