fixed typo in text

--- a/web/tmpl/CoGeAlign.tmpl
+++ b/web/tmpl/CoGeAlign.tmpl
@@ -123,7 +123,7 @@ Results Format:
 <option value=NEXUS>NEXUS
 </select>
 </div>
-Generating Scoring Matrix for Alignment <input type=checkbox id="gen_matrix">
+Generate Scoring Matrix for Alignment <input type=checkbox id="gen_matrix">
 <span class="small">(Using the method describe in Henikoff and Henikoff, 1992)</span>
 </TMPL_IF>
 
