--- a/web/tmpl/FeatList.tmpl
+++ b/web/tmpl/FeatList.tmpl
@@ -152,7 +152,10 @@ if (ajax.length)
    <TH> </TH>
    <TH class=header>Feature Name</TH>
    <TH class=header>Type</TH>
-   <TH class=header>Location</TH>
+   <TH class=header>Chr</TH>
+   <TH class=header>Start</TH>
+   <TH class=header>Stop</TH>
+   <TH class=header>Strand</TH>
    <TH class=header>Length</TH>
    <TH class=header>GC%</TH>
    <TH class=header>AT%</TH>
@@ -173,7 +176,10 @@ if (ajax.length)
       <TD><input type=checkbox id='<TMPL_VAR NAME=FEATID>'></TD>
       <TD><TMPL_VAR NAME=NAME></TD>
       <TD><TMPL_VAR NAME=TYPE></TD>
-      <TD><TMPL_VAR NAME=LOC></TD>
+      <TD><TMPL_VAR NAME=CHR></TD>
+      <TD><TMPL_VAR NAME=START></TD>
+      <TD><TMPL_VAR NAME=STOP></TD>
+      <TD><TMPL_VAR NAME=STRAND></TD>
       <TD><TMPL_VAR NAME=LENGTH></TD>
       <TD><TMPL_VAR NAME=GC></TD>
       <TD><TMPL_VAR NAME=AT></TD>
