correted site to cite

--- a/web/tmpl/header.tmpl
+++ b/web/tmpl/header.tmpl
@@ -191,7 +191,7 @@ function animate_section(name, style, speedy, show) {
 	      <li><a href="./docs/help/<TMPL_VAR NAME=HELP>" target="_blank">Page Docs</a></li>
 	      <li><a href="/CoGe/docs/help/CoGe/Overview.html" target="_blank">About CoGe</a></li>
 	      <li><a href="/CoGe/docs/help/Tutorials/Tutorials.html" target="_blank">Tutorials</a></li>
-	      <li><a href="/CoGe/docs/help/Contact/Contact.html" target="_blank">Contact or Site Us</a></li>
+	      <li><a href="/CoGe/docs/help/Contact/Contact.html" target="_blank">Contact or Cite Us</a></li>
 	</ul>
 	</li>
 	</ul>
